force-app/main/default/objects/JobAdvertisement__c/JobAdvertisement__c.object-meta.xml
<CustomObject>
    <label>JobAdvertisement</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>JobAdvertisement  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JobAdvertisements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>