force-app/main/default/objects/JobAdvertisement__c/fields/Roles_and_Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Roles_and_Responsibilities__c</fullName>
    <label>Roles and Responsibilities</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>