force-app/main/default/objects/JobAdvertisement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Title__c</columns>
    <columns>Years_of_Experience__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>